<resources>
    <string name="app_name">TrackMapStat</string>
    <string name="image_of_exercise">Image of exercise</string>
    <string name="start">START</string>
    <string name="stop">STOP</string>
    <string name="run_overview">Run Overview</string>
    <string name="time">Time:</string>
    <string name="distance">Distance:</string>
    <string name="save_run">Save Run</string>
    <string name="name">Name:</string>
    <string name="go_for_a_run">Go for a run!</string>
    <string name="all_your_runs">All Your Runs</string>
    <string name="no_recorded_runs">No recorded runs</string>
    <string name="view_run">View Run</string>
    <string name="pace">Pace:</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="statistics">Statistics</string>
</resources>
