<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".ViewSimpleRunFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/constraintLayout">
        <TextView
                android:text="@string/view_run"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/header_text"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="16dp" android:layout_marginStart="16dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/name_text"
                app:layout_constraintTop_toBottomOf="@+id/header_text" android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="32dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:text="@string/name"/>
        <TextView
                android:text="@string/distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/distance_text"
                app:layout_constraintTop_toBottomOf="@+id/name_text" android:layout_marginTop="8dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="32dp"/>
        <TextView
                android:text="@string/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/time_text"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/distance_text" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="32dp" android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
